--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ footer {
   font-weight: 400;
 }
 
-/* NAVBAR transparente encima de la imagen */
 .navbar-wrapper {
   position: absolute;
   top: 0;
@@ -102,8 +101,7 @@ footer {
   height: 40px;
 }
 
-/* HERO */
-.hero-full {
+.hero-section {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -158,7 +156,11 @@ footer {
   border-radius: 50px;
 }
 
-/* ABOUT */
+.btn-success {
+  background-color:var(--color-verde); 
+  outline-color: none;
+}
+
 .about-section {
   padding: 80px 0;
   background-color: var(--fondo-gris);
@@ -246,7 +248,7 @@ footer {
   color: var(--color-contenido);
   line-height: 1.6;
 }
-/* CLIENTS */
+
 .clients {
   background-color: var(--fondo-clients);
   padding: 80px 0;
@@ -275,7 +277,6 @@ footer {
   transform: scale(1.1);
 }
 
-/* TESTIMONIAL */
 .testimonial-section {
   position: relative;
   width: 100%;
@@ -293,17 +294,26 @@ footer {
 .testimonial-text {
   position: absolute;
   top: 50%;
-  left: 10%;
+  left: 0;
+  right: 0;
   transform: translateY(-50%);
-  max-width: 700px;
-  padding: 0 20px;
+  padding: 0 60px; /* distancia con los bordes izquierdo y derecho */
+  text-align: center; /* centra el texto en el ancho disponible */
 }
 
 .testimonial-text i {
   color: var(--color-verde);
+  display: block;
+  margin-bottom: 15px;
 }
 
-.testimonial-text p {
+.testimonial-text h3 {
   color: #fff;
-  margin-bottom: 0.75rem;
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+
+.testimonial-text span {
+  color: #fff;
+  font-size: 1rem;
 }
